--- a/Anomaly detaction/Main.ipynb
+++ b/Anomaly detaction/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2dd41aca",
+   "id": "e14c021d",
    "metadata": {},
    "source": [
     "# Anomaly Detection using VQVAE\n",
@@ -43,7 +43,6 @@
    "execution_count": 1,
    "id": "84e4eff5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from VQVAE import ResidualBlock, VectorQuantizer, VQVAE\n",
     "from Anomaly_detaction import AnomalyDetector\n",
@@ -56,11 +55,22 @@
     "from tensorflow.keras.models import load_model\n",
     "import numpy as np\n",
     "from tensorflow.keras.models import save_model"
-   ]
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a588a45-24b1-4001-b111-e77b61b6bf1a",
+   "metadata": {},
+   "source": [
+    "! pip install tensorflow "
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "cf037662",
+   "id": "b9e72c35",
    "metadata": {},
    "source": [
     "# Define hyperparameters\n",
@@ -70,23 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3e7ffbf5",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Define hyperparameters\n",
     "batch_size = 32\n",
     "num_epochs = 50\n",
     "initial_learning_rate = 0.001\n",
-    "num_embeddings = 64\n",
-    "embedding_dim = 64\n",
+    "num_embeddings = 512\n",
+    "embedding_dim = 128\n",
     "commitment_cost = 0.25\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "e0972b78",
+   "id": "2aa1e567",
    "metadata": {},
    "source": [
     "# Define the paths to the normal and unhealthy X-ray image directories\n",
@@ -96,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "442b65e6",
+   "execution_count": 3,
+   "id": "5c53846c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "normal_image_path = \"C:/Users/hasso/Desktop/Hu/jaar 3/INNO/Image-Processing-and-Computer-Vision/Anomaly detaction/chest_xray/chest_xray/train/NORMAL/\"  # List of normal image paths\n",
     "\n",
     "unhealthy_image_path = \"C:/Users/hasso/Desktop/Hu/jaar 3/INNO/Image-Processing-and-Computer-Vision/Anomaly detaction/chest_xray/chest_xray/train/PNEUMONIA/\"\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "cc4e650a",
+   "id": "21f0f0e7",
    "metadata": {},
    "source": [
     "# Create instances of the NormalDataset and UnhealthyXRayDataset\n",
@@ -118,10 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "be87bc51",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Create instances of the NormalDataset and UnhealthyXRayDataset\n",
     "normal_dataset_instance = NormalDataset(normal_image_path)\n",
@@ -154,11 +163,33 @@
     "val_normal_dataloader = val_normal_dataset.batch(batch_size).prefetch(tf.data.experimental.AUTOTUNE)\n",
     "\n",
     "unhealthy_dataloader = unhealthy_dataset.batch(batch_size).prefetch(tf.data.experimental.AUTOTUNE)\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "79fe7ff5",
+   "id": "6f7c61af",
+   "metadata": {},
+   "source": [
+    "# Load the model \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3077342b",
+   "metadata": {},
+   "source": [
+    "dummy_input = tf.zeros((1, 256, 256, 1))\n",
+    "vqvae = VQVAE(in_channels=1, num_embeddings=num_embeddings, embedding_dim=embedding_dim, commitment_cost=commitment_cost)\n",
+    "vqvae(dummy_input)\n",
+    "vqvae.load_model('model_f.h5')"
+   ],
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61b5907c",
    "metadata": {},
    "source": [
     "# Train the VQ-VAE Model\n",
@@ -173,19 +204,19 @@
    "execution_count": null,
    "id": "b1d6a24d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#reate an instance of the VQVAE model\n",
-    "vqvae = VQVAE(in_channels=1, num_embeddings=num_embeddings, embedding_dim=embedding_dim, commitment_cost=commitment_cost)\n",
+    "# #reate an instance of the VQVAE model\n",
+    "# vqvae = VQVAE(in_channels=1, num_embeddings=num_embeddings, embedding_dim=embedding_dim, commitment_cost=commitment_cost)\n",
     "\n",
-    "dataset_size = len(normal_dataset_instance)\n",
-    "# Train the model on the training dataset\n",
-    "vqvae.train_vqvae(train_normal_dataloader, num_epochs, initial_learning_rate, dataset_size, batch_size)\n"
-   ]
+    "# dataset_size = len(normal_dataset_instance)\n",
+    "# # Train the model on the training dataset\n",
+    "#  vqvae.train_vqvae(train_normal_dataloader, num_epochs, initial_learning_rate, dataset_size, batch_size)\n"
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "983f22a4",
+   "id": "31c5bba6",
    "metadata": {},
    "source": [
     "#  Evaluate the performance of the trained VQ-VAE model.\n",
@@ -198,7 +229,6 @@
    "execution_count": null,
    "id": "cce3aa58",
    "metadata": {},
-   "outputs": [],
    "source": [
     "total_loss = 0\n",
     "num_val_batches = 0\n",
@@ -212,11 +242,12 @@
     "\n",
     "avg_loss = total_loss / num_val_batches\n",
     "print(f'Validation loss: {avg_loss:.6f}')\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "b294fc29",
+   "id": "cd66d9a9",
    "metadata": {},
    "source": [
     "# Save the model"
@@ -227,15 +258,15 @@
    "execution_count": null,
    "id": "ae768abe",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Save the trained model to a file\n",
-    "vqvae.save_model(\"modelf.h5\")"
-   ]
+    "# vqvae.save_model(\"model_f.h5\")"
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "f55e61a3",
+   "id": "edd740b3",
    "metadata": {},
    "source": [
     "# Evaluate the model on the test dataset \n",
@@ -245,10 +276,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c5a3b061",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
    "source": [
     "# Evaluate model on test dataset\n",
     "mse = tf.keras.metrics.MeanSquaredError()\n",
@@ -282,11 +314,12 @@
     "    axes[1][i].imshow(x_recon[0], cmap='gray')\n",
     "\n",
     "plt.show()\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "600dd948",
+   "id": "5a0d3d9d",
    "metadata": {},
    "source": [
     "# Apply anomaly detection on the unhealthy dataset\n",
@@ -299,36 +332,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff014810",
+   "metadata": {},
+   "source": [],
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "c24e03b7",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "import random\n",
+    "\n",
     "# Create an instance of the AnomalyDetector class\n",
-    "anomaly_detector = AnomalyDetector(vqvae, threshold=0.05)\n",
-    "# Apply anomaly detection on the unhealthy dataset\n",
-    "anomalies = anomaly_detector.detect_anomalies(unhealthy_dataloader)\n",
+    "anomaly_detector = AnomalyDetector(vqvae, threshold=0.04)\n",
+    "\n",
+    "# Select 4 random samples from the unhealthy dataset\n",
+    "num_samples = 4\n",
+    "samples = random.sample(list(unhealthy_dataset), num_samples)\n",
+    "\n",
+    "# Apply anomaly detection on the selected samples\n",
+    "anomalies = anomaly_detector.detect_anomalies_on_samples(samples)\n",
     "print(f\"Anomalies detected: {len(anomalies)}\")\n",
     "\n",
-    "# Find the sample in the unhealthy_dataloader\n",
-    "sample_index = 0  # Choose the index of the sample you want to visualize\n",
-    "sample_x = None\n",
-    "\n",
-    "for idx, (x, _) in enumerate(unhealthy_dataloader):\n",
-    "    if idx == sample_index:\n",
-    "        sample_x = x\n",
-    "        break\n",
-    "\n",
-    "if sample_x is None:\n",
-    "    raise ValueError(f\"Sample index {sample_index} is out of range.\")\n",
-    "\n",
     "# Visualize the anomaly detection results for a specific sample\n",
+    "sample_index = 0  # Choose the index of the sample you want to visualize\n",
+    "sample_x = samples[sample_index][0]\n",
+    "\n",
     "x_recon, _, _, _, _ = vqvae(sample_x[np.newaxis, ...])\n",
     "anomaly_detector.visualize_heatmap(sample_x, x_recon[0])\n"
-   ]
+   ],
+   "outputs": []
   },
   {
    "cell_type": "markdown",
-   "id": "4a318b7b",
+   "id": "b9080e43",
    "metadata": {},
    "source": [
     "Anomalie detectie is een techniek die wordt gebruikt om zeldzame gebeurtenissen of items te identificeren die aanzienlijk afwijken van het grootste deel van de data. Deze afwijkende items worden anomalieën of uitbijters genoemd en kunnen duiden op kritieke incidenten, zoals fraude, storingen, defecten of andere ongewenste gebeurtenissen. In de context van beeldverwerking kan anomalie detectie helpen bij het identificeren van ongebruikelijke of onverwachte patronen in afbeeldingen die mogelijk verband houden met defecten, beschadigingen of andere ongewenste kenmerken.\n",
@@ -348,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f138add1",
+   "id": "d6e8d4e0",
    "metadata": {},
    "source": [
     "# Conclusie \n",
@@ -377,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
